--- a/index.css
+++ b/index.css
@@ -7,8 +7,13 @@ body {
     padding-right: 15%;
 }
 
-body.dev {
+#dev-border.dev {
     border: 4px #ff0 solid;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 #changelog h3 {
