--- a/index.css
+++ b/index.css
@@ -52,6 +52,10 @@ h3 time {
     border-color: #fcc;
 }
 
+fieldset .pure-g .pure-u-12-24, fieldset .pure-g .pure-u-1 {
+    margin: .1em 0;
+}
+
 .spoilers {
     float: right;
 }
@@ -81,8 +85,8 @@ h3 time {
     opacity: 0;
 }
 
-#seed-url.hidden, #clear-seed.hidden {
-    display: none;
+#relic-logic-field.hide {
+    visibility: hidden;
 }
 
 #loader {
@@ -91,6 +95,9 @@ h3 time {
     position: relative;
     overflow: hidden;
     background-color: #ddd;
+}
+
+#loader.hide {
     visibility: hidden;
 }
 
@@ -118,4 +125,60 @@ h3 time {
     position: absolute;
     top: 0;
     left: 0;
+}
+
+.tooltip-indicator {
+    font-size: small;
+    font-weight: bold;
+    background: #999;
+    color: #fff;
+    border-radius: 50%;
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    text-align: center;
+}
+
+.tooltip-wrapper {
+    cursor: help;
+    position: relative;
+}
+
+.tooltip-wrapper .tooltip {
+    background: #fff;
+    bottom: 100%;
+    display: block;
+    margin-bottom: 1em;
+    opacity: 0;
+    padding: 1.25em;
+    pointer-events: none;
+    position: absolute;
+    width: 320px;
+    transform: translateY(10px);
+    transition: all .25s ease-out;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+}
+
+.tooltip-wrapper .tooltip:before {
+    bottom: -20px;
+    content: ' ';
+    display: block;
+    height: 20px;
+    left: 0;
+    position: absolute;
+    width: 100%;
+}
+
+.tooltip-wrapper:hover .tooltip {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(0px);
+}
+
+#logic-author {
+    position: absolute;
+    bottom: 3px;
+    right: 5px;
+    font-size: small;
+    color: #999;
 }
