Fix extension button rendering when disabled

--- a/index.css
+++ b/index.css
@@ -265,3 +265,11 @@ body.dark {
 .dark #target.error {
     border-color: #fcc;
 }
+
+.dark input[type="radio"]:disabled {
+    visibility: hidden;
+}
+
+.dark input[type="radio"]:checked:disabled {
+    visibility: visible;
+}
