Add complexity selector to GUI

--- a/index.css
+++ b/index.css
@@ -197,6 +197,10 @@ input[type="number"] {
     margin-left: 2em;
 }
 
+input[type="number"] {
+    width: 2.5em;
+}
+
 /* Menu mode */
 
 body.menu {
