--- a/index.css
+++ b/index.css
@@ -278,7 +278,20 @@ body.menu {
 .menu .tooltip-wrapper .tooltip > span {
     width: 280px;
     padding: 20px;
-    display: inline-block;
+    display: block;
+}
+
+.menu #preset-author {
+    position: absolute;
+    display: block;
+    width: 310px;
+    right: auto;
+    left: 0;
+    text-align: right;
+}
+
+.menu fieldset {
+    border: 1px #fff solid;
 }
 
 @keyframes tooltip {
