--- a/index.css
+++ b/index.css
@@ -64,12 +64,18 @@ h3 time {
 }
 
 #target {
-    text-align: center;
-    padding: 3em 0;
-    margin: .5em 0;
+    height: 9em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-fieldset .pure-g .pure-u-12-24, fieldset .pure-g .pure-u-1 {
+#target div {
+    text-align: center;
+}
+
+fieldset .pure-g .pure-u-12-24,
+fieldset .pure-g .pure-u-1 {
     margin: .1em 0;
 }
 
@@ -77,6 +83,7 @@ fieldset .pure-g .pure-u-12-24 fieldset {
     margin-right: 1em;
 }
 
+form > fieldset,
 form > .pure-u-14-24 > fieldset {
     margin-bottom: .5em;
 }
@@ -276,6 +283,15 @@ body.menu {
     animation: pulse 1s infinite;
 }
 
+.menu #target.animate {
+    animation: expand-target 2s;
+    overflow: hidden;
+}
+
+.menu #target-container > div {
+    margin: 0 .3em .2em .3em;
+}
+
 .menu #target,
 .menu #spoilers-container {
     border: 1px #fff solid;
@@ -283,6 +299,43 @@ body.menu {
 
 .menu #target.error {
     animation: pulse 1s infinite;
+}
+
+.menu #target.animate.hide {
+    animation: shrink-target 2s;
+    animation-fill-mode: forwards;
+}
+
+.menu #target > div {
+    width: 30em;
+    white-space: nowrap;
+}
+
+@keyframes expand-target {
+    0% {
+        width: 0;
+        height: 0;
+    }
+    100% {
+        width: 100%;
+        height: 9em;
+    }
+}
+
+@keyframes shrink-target {
+    0% {
+        width: 100%;
+        height: 9em;
+    }
+    99% {
+        width: 0;
+        height: 0;
+    }
+    100% {
+        width: 0;
+        height: 0;
+        border-width: 0;
+    }
 }
 
 @keyframes pulse {
@@ -567,6 +620,10 @@ body.menu {
     border-color: #fcc;
 }
 
+.light #target legend {
+    display: none;
+}
+
 .light input[type="submit"] {
     color: #000;
     padding: .5em 1em;
@@ -683,6 +740,10 @@ body.menu {
 
 .dark #target.error {
     border-color: #fcc;
+}
+
+.dark #target legend {
+    display: none;
 }
 
 .dark input[type="file"] {
