--- a/static/css/variables.css
+++ b/static/css/variables.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: SotnFont;
+  src: url('../font/SymphonyoftheNightfont.ttf');
+}
+
 :root {
   --white: #fff;
   --black: #000;
@@ -24,6 +29,8 @@
 
   --green1: #cfc;
   --green2: #696;
+
+  --sotnFont: "SotnFont";
 }
 
 * {
