--- a/static/css/lightmode.css
+++ b/static/css/lightmode.css
@@ -5,6 +5,10 @@
   background: var(--white);
 }
 
+.light header {
+  border-bottom: 1px solid var(--gray3);
+}
+
 .light select,
 .light input[type="text"],
 .light input[type="number"],
