Fixes to the website
Reverts some of the website due to bugs with Prologue rewards, complexity and relic locations. also adds animations to dark and light modes custom preset section when selected.

--- a/index.css
+++ b/index.css
@@ -288,7 +288,7 @@ body.menu {
 }
 
 .menu #target.animate {
-    animation: expand-target 2s;
+    animation: expand-target .5s;
     overflow: hidden;
 }
 
@@ -311,7 +311,7 @@ body.menu {
 }
 
 .menu #target.animate.hide {
-    animation: shrink-target 2s;
+    animation: shrink-target .5s;
     animation-fill-mode: forwards;
 }
 
@@ -326,14 +326,14 @@ body.menu {
         height: 0;
     }
     100% {
-        width: 100%;
+        width: 98.5%;
         height: 9em;
     }
 }
 
 @keyframes shrink-target {
     0% {
-        width: 100%;
+        width: 98.5%;
         height: 9em;
     }
     99% {
@@ -433,7 +433,7 @@ body.menu {
 }
 
 .menu #notification.hide {
-    animation: shrink 2s;
+    animation: shrink .5s;
 }
 
 .menu #notification span {
@@ -510,12 +510,12 @@ body.menu {
 }
 
 .menu #options.animate.hide {
-    animation: hide-options 1s;
+    animation: hide-options .5s;
     animation-fill-mode: forwards;
 }
 
 .menu #options.animate {
-    animation: show-options 1s;
+    animation: show-options .5s;
 }
 
 @keyframes show-options {
@@ -527,11 +527,9 @@ body.menu {
         overflow: hidden;
    }
     100% {
-        max-width: 50ex;
+        max-width: 100ex;
         max-height: 15em;
-        margin-top: .$em;
-        padding: .45em .5em;
-        overflow: hidden;
+        
     }
 }
 
@@ -558,6 +556,10 @@ body.menu {
         padding: 0;
         overflow: hidden;
     }
+}
+
+.menu #options.hide {
+    display: none;
 }
 
 /* Light mode */
@@ -616,7 +618,7 @@ body.menu {
 }
 
 .light #target.animate {
-    animation: expand-target 2s;
+    animation: expand-target .5s;
     overflow: hidden;
 }
 
@@ -643,7 +645,7 @@ body.menu {
 }
 
 .light #target.animate.hide {
-    animation: shrink-target 2s;
+    animation: shrink-target .5s;
     animation-fill-mode: forwards;
 }
 
@@ -684,9 +686,16 @@ body.menu {
     display: none;
 }
 
-.light #options.hide {
-    display: none;
+.light #options.animate.hide {
+    animation: hide-options .5s;
+    animation-fill-mode: forwards;
 }
+
+.light #options.animate {
+    animation: show-options .5s;
+}
+
+
 
 /* Dark mode */
 
@@ -757,7 +766,7 @@ body.menu {
 }
 
 .dark #target.animate {
-    animation: expand-target 2s;
+    animation: expand-target .5s;
     overflow: hidden;
 }
 
@@ -784,7 +793,7 @@ body.menu {
 }
 
 .dark #target.animate.hide {
-    animation: shrink-target 2s;
+    animation: shrink-target .5s;
     animation-fill-mode: forwards;
 }
 
@@ -838,6 +847,12 @@ body.menu {
     display: none;
 }
 
-.dark #options.hide {
-    display: none;
+.dark #options.animate.hide {
+    animation: hide-options .5s;
+    animation-fill-mode: forwards;
 }
+
+.dark #options.animate {
+    animation: show-options .5s;
+}
+
