--- a/index.css
+++ b/index.css
@@ -72,10 +72,7 @@ h3 time {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#target div {
-    text-align: center;
+    flex-wrap: wrap;
 }
 
 fieldset .pure-g .pure-u-12-24,
@@ -292,10 +289,6 @@ body.menu {
     overflow: hidden;
 }
 
-.menu #target-container > div {
-    margin: 0 .3em .2em .3em;
-}
-
 .menu #target {
     border-width: 10px;
     border-style: dashed;
@@ -315,10 +308,10 @@ body.menu {
     animation-fill-mode: forwards;
 }
 
-.menu #target > div {
+/* .menu #target > div {
     width: 30em;
     white-space: nowrap;
-}
+} */
 
 @keyframes expand-target {
     0% {
@@ -618,10 +611,6 @@ body.menu {
     overflow: hidden;
 }
 
-.light #target-container > div {
-    margin: 0 .3em .2em .3em;
-}
-
 .light #target {
     border-width: 10px;
     border-style: dashed;
@@ -645,10 +634,10 @@ body.menu {
     animation-fill-mode: forwards;
 }
 
-.light #target > div {
+/* .light #target > div {
     width: 30em;
     white-space: nowrap;
-}
+} */
 
 .light input[type="submit"] {
     color: #000;
@@ -766,10 +755,6 @@ body.menu {
     overflow: hidden;
 }
 
-.dark #target-container > div {
-    margin: 0 .3em .2em .3em;
-}
-
 .dark #target {
     border-width: 10px;
     border-style: dashed;
@@ -793,10 +778,10 @@ body.menu {
     animation-fill-mode: forwards;
 }
 
-.dark #target > div {
+/* .dark #target > div {
     width: 30em;
     white-space: nowrap;
-}
+} */
 
 .dark input[type="file"] {
     color: #fff;
