fixes Android browser scroll
fixes to android browser scroll

--- a/index.css
+++ b/index.css
@@ -929,7 +929,7 @@ li.move-right{
 @media screen and (max-width: 1000px){
 
     body{
-        overflow: hidden;
+        overflow: visible;
     }
 
     .nav-list{
