--- a/community.css
+++ b/community.css
@@ -117,7 +117,7 @@ li.move-right{
 @media screen and (max-width: 1000px){
 
     body{
-        overflow: hidden;
+        overflow: visible;
     }
 
     .nav-list{
