Changes to website
Removed the need to use pure css and touched up image to be smaller

--- a/static/css/randomizations.css
+++ b/static/css/randomizations.css
@@ -65,7 +65,8 @@
 
 @media screen and (min-width: 64em) {
   #randomization-options {
-    display: flex;
+    /* display: flex; */
+    width: 100%;
   }
 
   #relic-locations-set {
