--- a/index.css
+++ b/index.css
@@ -891,9 +891,11 @@ header{
 }
 
 nav{
+    margin-left: 5%;
+    margin-right: 5%;
     display: flex;
     width: 100%;
-    height: 8rem;
+    height: 4rem;
     border-bottom: 1px solid rgba(255,255,255, .1);
 }
 
