Clean up mapcolor and alucard display on the website
Cleaned up the section of the website that would display the images of the map and alucard. this should make it easier to work with if new stuff is added. also removes the Bounty hunter tool from the navbar as the website now has the tool baked in

--- a/static/css/randomizations.css
+++ b/static/css/randomizations.css
@@ -6,7 +6,18 @@
   gap: 1rem;
   margin-bottom: 0.5rem;
 }
+#alucard-palette-dropdown,
+#alucard-liner-dropdown,
+#map-dropdown{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 0.5rem;
+}
 
+
+#alucard-palette-dropdown label,
+#alucard-liner-dropdown label,
 #seed-container label,
 #preset-dropdown label,
 #complexity-slider label {
