--- a/index.css
+++ b/index.css
@@ -11,6 +11,21 @@ html, body {
     height: 100%;
 }
 
+.map-color{
+    flex: 0;
+    height: 32px;
+    width: 48px;
+    zoom: 300%;
+    image-rendering: pixelated;
+}
+
+.alucard-display{
+    zoom: 200%; 
+    image-rendering: pixelated; 
+    width:96px; 
+    height:64px"
+}
+
 #version {
     float: right;
     font-size: small;
@@ -74,6 +89,7 @@ h1 {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
+
 
 .dev h1 {
     display: none;
@@ -894,9 +910,10 @@ nav{
     margin-left: 5%;
     margin-right: 5%;
     display: flex;
-    width: 100%;
-    height: 4rem;
+    height: 8rem;
     border-bottom: 1px solid rgba(255,255,255, .1);
+    position: sticky;
+    top: 0;
 }
 
 .nav-list{
